5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1865_1538.log
== TEST (2019-07-04 10:30:25) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
while (x>-1 or x<1) and (k>0):
	i = i + tg
	print(i)
-- OUTPUT:
1.030840979456
2.061681958912
3.092522938368
4.123363917824
5.1542048972800005
6.185045876736001
7.215886856192001
8.246727835648
9.277568815104
10.308409794560001
11.339250774016001
12.370091753472002
13.400932732928002
14.431773712384002
15.462614691840002
16.493455671296
17.524296650752
18.555137630207998
19.585978609663997
20.616819589119995
21.647660568575994
22.678501548031992
23.70934252748799
24.74018350694399
25.771024486399988
26.801865465855986
27.832706445311985
28.863547424767983
29.89438840422398
30.92522938367998
31.95607036313598
32.98691134259198
34.01775232204798
35.048593301503985
36.07943428095999
37.11027526041599
38.14111623987199
39.17195721932799
40.202798198783995
41.23363917824
42.264480157696
43.295321137152
44.326162116608
45.357003096064005
46.38784407552001
47.41868505497601
48.44952603443201
49.480367013888014
50.511207993344016
51.54204897280002
52.57288995225602
53.60373093171202
54.634571911168024
55.665412890624026
56.69625387008003
57.72709484953603
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:51) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	print(i)
-- OUTPUT:
1.030840979456
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:09) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	print(round(i,8)):
-- ERROR:
File "XXXX", line 10
    print(round(i,8)):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:35) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
print(round(i),8):
-- ERROR:
File "XXXX", line 10
    print(round(i),8):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:04) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i),1
print(y)
-- OUTPUT:
(1, 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:19) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,1
print(y)
-- ERROR:
File "XXXX", line 11
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:22) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,1)
print(y)
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:33) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- OUTPUT:
1.03084098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:37) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 + ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- OUTPUT:
1.03084098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:54) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:58) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:33) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k + 1)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 7
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:38) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k + 1)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 7
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:42) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 7
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:51) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 7
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:03) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k)
b = 0
if (x>-1 or x<1) and (k>0):
	b = b + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 7
    b = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:11) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**(k)

if (x>-1 or x<1) and (k>0):
	b = b + tg
y = round(i,8)
print(y)
-- ERROR:
File "XXXX", line 8
    if (x>-1 or x<1) and (k>0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:16) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)

if (x>-1 or x<1) and (k>0):
	b = b + tg
y = round(i,8)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    b = b + tg
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:21) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)
i = 0
if (x>-1 or x<1) and (k>0):
	b = b + tg
y = round(i,8)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    b = b + tg
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:30) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(y)
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:51) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
y = round(i,8)
print(round(i,8))
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:07) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k+1)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.99032827
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:23) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)*2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.93831804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:30) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)*2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.93831804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:35:38) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)*2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.93831804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:36) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**2)**(k)*2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.93831804
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:00) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:37:06) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - ((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.96915902
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:32) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = (1 - x**2) *((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.02116925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:38) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = (1 - x**2) *((x**2)**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg


print(round(i,8))
-- OUTPUT:
0.02116925
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:10) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - x**k
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:32) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:46:38) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- EXECUTION TIME:
0.892627
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.824384
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.85223664
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.6864
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:46:43) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:03) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = (1 - (x**k))**2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.67960898
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:47:10) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = (1 - (x**k))**2
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- EXECUTION TIME:
0.869059
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.67960898
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.72630729
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.47114496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:19) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:47:24) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:47:29) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg

print(round(i,8))
-- EXECUTION TIME:
0.596135
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.824384
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.85223664
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.6864
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:08) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	k = k -1

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:12) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	k = k -1

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:16) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	k = k -1

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:48:24) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))

tg = 1 - (x**k)
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	k = k -1

print(round(i,8))
-- EXECUTION TIME:
0.61338
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.824384
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.85223664
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.6864
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:55) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))
tg = 1 - (x**k)
ac = 0
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	
	ac = ac -1
print(ac)
print(round(i,8))
-- OUTPUT:
-1
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:12) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))
tg = 1 - (x**k)
ac = 0
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	ac = ac + 1
print(ac)
print(round(i,8))
-- OUTPUT:
1
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:19) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))
tg = 1 - (x**k)
ac = 0
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	ac = ac + 1

print(round(i,8))
-- OUTPUT:
0.824384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:51:19) 
-- CODE:
from math import*

x = float(input("Numero: "))
k = int(input("Serie: "))
tg = x **(2*i)*(-1)
ac = 0
i = 0
if (x>-1 or x<1) and (k>0):
	i = i + tg
	ac = ac + 1

print(round(i,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tg = x **(2*i)*(-1)
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
